# ai-config

./: .gitignore  CONTRIBUTING.md  README.md  coding.md  install.sh  platform-engineering.json  python.md  terraform.md  workflow.md
agents/: README.md  code-reviewer.json  codebase-analyzer.json  general-purpose.json  plan-reviewer.json  platform-agent-startup.sh  platform-engineering.json  principal-engineer-safe.json  principal-engineer-sandbox.json  principal-engineer.json  principal-engineer.prompt.bak  principal-engineer.prompt.md  qa-runner.json
guidance/: TOOLS.md
prompts/: ai-readme-prompt.md  codebase-analyzer.prompt.md  principal-engineer.prompt.md  qa-runner.prompt.md
rule-fetcher/: README.md  agent-rules.yaml  fetch_files.py  fetch_rules.py  pyproject.toml
rule-fetcher/tests/: test_fetch_files.py
rules/: coding.md  python.md  workflow.md
sandbox/: Dockerfile  README.md  entrypoint.sh  kiro  run-kiro-sandbox.sh
skills/action-analyze-codebase/: SKILL.md
skills/action-create-skill/: SKILL.md
skills/action-create-terraform-module/: SKILL.md
skills/action-project-docs/: SKILL.md
skills/general-coding-expertise/: SKILL.md
skills/general-planning/: SKILL.md
skills/lang-python-expertise/: SKILL.md
skills/lang-terraform-expertise/: SKILL.md
skills/policy-lang-python/: SKILL.md
skills/policy-lang-terraform/: SKILL.md
skills/skill-creator/: SKILL.md
skills/tool-git-github/: SKILL.md
skills/workflow-implement/: SKILL.md
skills/workflow-plan/: SKILL.md
skills/workflow-review/: SKILL.md
(+8 files in other folders)
