[project]
name = "rule-fetcher"
version = "0.1.0"
description = "File fetcher script that copies/downloads files based on YAML configuration"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.scripts]
fetch-rules = "fetch_rules:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
